--- a/gamestate_integration_musicControl.cfg
+++ b/gamestate_integration_musicControl.cfg
@@ -1,4 +1,4 @@
-"Console Sample v.1"
+"CSGOMusicPlayer"
 {
  "uri" "http://127.0.0.1:4438"
  "timeout" "5.0"
@@ -7,9 +7,9 @@
  "heartbeat" "10.0"
  "data"
  {
-   "provider"            "1"      // general info about client being listened to: game name, appid, client steamid, etc.
-   "map"                 "1"      // map, gamemode, and current match phase ('warmup', 'intermission', 'gameover', 'live') and current score
-   "round"               "1"      // round phase ('freezetime', 'over', 'live'), bomb state ('planted', 'exploded', 'defused'), and round winner (if any)
-   "player_id"           "1"      // player name, clan tag, observer slot (ie key to press to observe this player) and team
+   "provider"            "1"
+   "map"                 "1"
+   "round"               "1"
+   "player_id"           "1"
  }
 }
